# X15

./: .gitignore  .prettierignore  AGENTS.md  ARCHON.md  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-entrypoint.sh  eslint.config.js  eslint.config.mjs  index.html  package-lock.json  package.json  plan.md  prettier.config.js  tsconfig.json
.archon/: config.yaml
.archon/commands/defaults/: archon-finalize-pr.md
archon-e2e/: 2026-04-30T20-00-23-729Z.md  2026-04-30T20-13-44-187Z.md  2026-04-30T20-31-21-828Z-12.md  2026-04-30T20-34-16-094Z-16.md  2026-04-30T20-34-16-094Z-17.md  2026-04-30T20-34-16-094Z-18.md  2026-04-30T20-36-33-498Z-22.md  2026-04-30T20-36-33-498Z-23.md  2026-04-30T20-36-33-498Z-24.md  2026-05-01T16-45-23-689Z-61.md  2026-05-01T16-50-16-562Z-63.md  video-recording-2026-05-01-1959-77-ui-recording.md  video-recording-2026-05-01-1959-77-ui-recording.webm  video-recording-mp4-branch-2026-05-01-2026-79-ui-recording.md
archon-test/: issue-106-106-ui-recording.md  issue-113-113-ui-recording.md  issue-128-128-ui-recording.md
hackathon-orchestrator/: .env.example  .gitignore  README.md  pyproject.toml
hackathon-orchestrator/orch/: __init__.py  agents_factory.py  cli.py  config.py  cursor.py  git_ops.py  github.py  logger.py  models.py  orchestrator.py  providers.py  quality.py
scripts/: build-binaries.sh
src/: cart.test.ts  cart.ts  catalog.test.ts  catalog.ts  checkout.test.ts  checkout.ts  main.test.ts  main.ts  products.ts  shop-data.test.ts  shop-data.ts  store.test.ts  store.ts  storefront.test.ts  storefront.ts  styles.css
(+26 files in other folders)
